Fix lower screen width clippig

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   width: 75vw;
   height: 75vh;
   margin-left: 13%;
-  margin-top: 4.5%;
+  margin-top: calc(20px + 2vw);
 }
 
 .Ocean-background {
